Version 11.64

 - Updated request header filter rules (allows signed HTTP exchanges content
   type in Accept header).

Version 11.63

 - Adds the option 'jsredirect' to the QS_UserTrackingCookieName directive:
   Client (browser) has to use Javascript within the cookie check page
   to fetch the cookie and to redirect the client back to the initially
   requested page (adding Javascript to the cookie challenge).
   SSI variables to be used in the HTML page / Javascript:
   - QS_UT_QUERY: query string to call (ajax) the cookie page again to
                  obtain the cookie.
   - QS_UT_NAME: name of the cookie
   - QS_UT_INITIAL_URI: inital page to redirect to
   Sample page: http://mod-qos.sourceforge.net/cookie-ir.shtml

Version 11.62

 - Machine-readable version of the status viewer does no longer
   show QS_SrvMaxConn* counters for virtual hosts using the base
   server's configuration and counter.

 - New directive QS_MaxClients.

Version 11.61

 - QS_SrvMaxConnPerIP can handle more than MaxClient IP addresses
   (if the server opens new connections faster than closing old)
   and enables memory block distribution by default.

Version 11.60

 - Fixed: Wrong connection counter (total server connections stored in the
   QS_AllConn variable) when using SrvMaxConn* directives globally only but
   other QS_* directives within virtual hosts. Bug influenced
   QS_SrvMinDataRate behavior as well (activating and increasing the min.
   data rate too fast).

Version 11.59

 - QS_EventRequestLimit writes the current counter value to the
   QS_EventRequestLimit_<env-variable>_Counter envrionment variable.

 - New directive QS_SetEnvIfCmp.

Version 11.58

 - Adds directive QS_UnsetReqHeader.

 - Removes version information in automake configure script (utilities).

Version 11.57

 - Adds qsrespeed and qsre (previous "regexspeed" and "regex" dev tool)
   to the support utilities.

Version 11.56

 - Non-functional: Changed QS_Status invocation timer implementation.
