@@ -1,0 +1,18 @@
+INCLUDE scripts/ports
+
+CLIENT
+
+_REQ localhost $QS_PORT_BASE
+__GET ?name=value HTTP/1.1
+__Host: localhost
+__Connection: keep-alive
+__
+_EXPECT . "400 Bad Request"
+_WAIT
+_CLOSE
+_SLEEP 100
+_EXPECT EXEC "mod_qos\(045\): access denied, invalid request line: can't parse uri, c="
+_EXEC tail -1 logs/error_log
+
+END
+
