@@ -3,6 +3,8 @@ Version 11.64
  - Updated request header filter rules (allows signed HTTP exchanges content
    type in Accept header).
 
+ - Adds directive QS_ReqSanityCheck.
+
 Version 11.63
 
  - Adds the option 'jsredirect' to the QS_UserTrackingCookieName directive:
